--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<H1>Шрек</H1>
+		<H1>Шрhек</H1>
 		<p>«<b>Шрек</b>» (англ. Shrek) — американский компьютерно-анимационный фэнтезийный комедийный фильм, основанный на одноименной 
 			детской книге УЕленама Стейга.</p>
 		<p>Снятый Эндрю Адамсоном и Вики Дженсон (в их полнометражных режиссёрских дебютах) по сценарию Теда Эллиота, Терри Россио, Джо Стиллмана и Роджера С. Х. Шульмана, это первый мультфильм из серии фильмов о Шреке. Главные роли озвучивали Майк Майерс, Эдди Мёрфи, Камерон Диас и Джон Литгоу. По сюжету огр по имени Шрек обнаруживает, что его дом на болоте наводнён сказочными существами, изгнанными одержимым правителем лордом Фаркуадом. С помощью Осла Шрек заключает договор с Фаркуадом, чтобы спасти принцессу Фиону в обмен на восстановление контроля над своим болотом.</p>
