--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>Название Страницы</title>
 		<meta name="description" counter="Page Description">
+		<link rel="stylesheet" href="styles.css">
 	</head>
 
 	<body>
