--- a/event.html
+++ b/event.html
@@ -28,7 +28,14 @@
 			</div>
 		</header>
 		<main class="main">
-			main
+			<article class="">
+                <form class="reserve">
+                    <div class="reserve__checkbox">1</div>
+                    <div class="reserve__scheme">1</div>
+                    <div class="reserve__order">1</div>
+                    <div class="reserve__legend">1</div>
+                </form>
+            </article>
 		</main>
 		<footer class="page-footer">
 			footer
