--- a/event.html
+++ b/event.html
@@ -16,7 +16,7 @@
 				<a href="index.html" class="page-header__logo">
 					<img src="assets/icons/logo.svg" class="page-header__logo-icon" alt="logo">
 				</a>
-				<nav class="page-header__nav-link">
+				<nav class="page-header__nav">
 					<a href="#" class="page-header__nav-link">Мероприятие</a>
 					<a href="#" class="page-header__nav-link">Блог</a>
 					<a href="#" class="page-header__nav-link">О нас</a>
