--- a/event.html
+++ b/event.html
@@ -30,7 +30,7 @@
 		<main class="main">
 			<article class="">
                 <form class="reserve">
-                    <div class="reserve__checkbox">1</div>
+                    <div class="reserve__check">1</div>
                     <div class="reserve__scheme">1</div>
                     <div class="reserve__order">1</div>
                     <div class="reserve__legend">1</div>
