--- a/srs/html/index.html
+++ b/srs/html/index.html
@@ -7,14 +7,14 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">	
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="srs/styles/styles.css">
 	</head>
 
 	<body class="body">
 		<header class = "page-header">
 			<div class="page-header__container">
 				<a href="index.html" class="page-header__logo">
-					<img src="assets/icons/logo.svg" class="page-header__logo-icon" alt="logo">
+					<img src="srs/assets/icons/logo.svg" class="page-header__logo-icon" alt="logo">
 				</a>
 				<nav class="page-header__nav">
 					<a href="#" class="page-header__nav-link">Мероприятие</a>
