--- a/srs/html/event.html
+++ b/srs/html/event.html
@@ -1,33 +1,9 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Проект</title>
-		<meta name="description" counter="Page Description">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">	
-		<link rel="stylesheet" href="styles.css">
-	</head>
-
+<html lang="ru">
+	@@include('blocks/head.html')
 	<body class="body">
-		<header class = "page-header">
-			<div class="page-header__container">
-				<a href="index.html" class="page-header__logo">
-					<img src="assets/icons/logo.svg" class="page-header__logo-icon" alt="logo">
-				</a>
-				<nav class="page-header__nav">
-					<a href="#" class="page-header__nav-link">Мероприятие</a>
-					<a href="#" class="page-header__nav-link">Блог</a>
-					<a href="#" class="page-header__nav-link">О нас</a>
-					<a href="#" class="page-header__nav-link">Контакты</a>
-				</nav>
-				<div class="page-header__right-block"></div>
-					<a href="#" class="page-header__btn btn">Войти</a>
-				</div>
-			</div>
-		</header>
-		<main class="main">
+		@@include('blocks/page-header.html')
+    	<main class="main">
 			<article class="">
                 <form class="reserve">
                     <div class="reserve__check">1</div>
@@ -37,8 +13,6 @@
                 </form>
             </article>
 		</main>
-		<footer class="page-footer">
-			footer
-		</footer>
+
 	</body>
 </html>
