--- a/srs/html/blocks/head.html
+++ b/srs/html/blocks/head.html
@@ -1,9 +1,12 @@
-<head>
-    <meta charset="utf-8">
-    <title>Проект</title>
-    <meta name="description" counter="Page Description">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">	
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
+<!DOCTYPE html>
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <title>Проект</title>
+        <meta name="description" counter="Page Description">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">	
+        <link rel="stylesheet" href="styles/styles.less">
+    </head>
+</html>
