--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('blocks/head.html')
+  <head>@@include('blocks/head.html')</head>
   <body class="body">
 	@@include('blocks/page-header.html')
-	<main class="main">
-	</main>
+	<main class="main">main</main>
 	@@include('blocks/page-footer.html')
   </body>
 </html>
