--- a/src/html/events.html
+++ b/src/html/events.html
@@ -30,7 +30,9 @@
                       }
                     ])
                   </div>
-		</main>
-        @@include('blocks/page-footer.html')
+                </section>
+            </div>
+		  </main>
+      @@include('blocks/page-footer.html')
 	</body>
 </html>
