--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,8 @@
     <h2">арт — пространство</h2>
     <h2>lenni</h2>
     <h2>для людей, горящих сердцем и деломместо для настоящего</h2>
-    </main>
+    @@include('blocks/event-pp.html')
+  </main>
 	@@include('blocks/page-footer.html')
   </body>
 </html>
