--- a/src/html/events.html
+++ b/src/html/events.html
@@ -70,5 +70,6 @@
             </div>
 		  </main>
       @@include('blocks/page-footer.html')
+      @@include('blocks/event-pp.html')
 	</body>
 </html>
