--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,11 +4,11 @@
   <body class="body">
 	@@include('blocks/page-header.html')
 	<main class="main">
-    <h2">арт — пространство</h2>
+    <!--<h2">арт — пространство</h2>
     <h2>lenni</h2>
-    <h2>для людей, горящих сердцем и деломместо для настоящего</h2>
-    @@include('blocks/event-pp.html')
+    <h2>для людей, горящих сердцем и деломместо для настоящего</h2> -->
   </main>
 	@@include('blocks/page-footer.html')
+  @@include('blocks/event-pp.html')
   </body>
 </html>
