--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="show-event-popup">
   <head>@@include('blocks/head.html')</head>
   <body class="body">
 	@@include('blocks/page-header.html')
