--- a/src/html/blocks/event-pp.html
+++ b/src/html/blocks/event-pp.html
@@ -88,7 +88,7 @@
                     </label>
                 </div>
                 <div class="form__btns">
-                    <button class="form__btn btn" type="button">Отправить</button>
+                    <button class="form__btn btn" type="submit">Отправить</button>
                     <button class="form__btn-close" type="button">Закрыть</button>
                 </div>
             </form>
