--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru" class="show-event-popup">
+ <html lang="ru"><!--class="show-event-popup" -->
   <head>@@include('blocks/head.html')</head>
   <body class="body">
 	@@include('blocks/page-header.html')
 	<main class="main">
-    <!--<h2">арт — пространство</h2>
-    <h2>lenni</h2>
-    <h2>для людей, горящих сердцем и деломместо для настоящего</h2> -->
+    @@include('blocks/section-title.html')
   </main>
 	@@include('blocks/page-footer.html')
-  @@include('blocks/event-pp.html')
+  <!-- @@include('blocks/event-pp.html') -->
   </body>
 </html>
