--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
 	@@include('blocks/page-header.html')
 	<main class="main">
     @@include('blocks/section-title.html')
+    @@include('blocks/about.html')
   </main>
 	@@include('blocks/page-footer.html')
   <!-- @@include('blocks/event-pp.html') -->
