--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -14,7 +14,7 @@
             <h3 class="about__subtitle">
                 Мы предоставляем площади для вашего мероприятия
             </h3>
-            <picture class="about__picture2">
+            <picture class="about__block2-picture2">
                 <img src="assets/images/pic(1).jpg" alt="about2" />
             </picture>
 
@@ -27,10 +27,10 @@
         </div>
         <div class="about__block3">
             <picture class="about__block3-picture">
-                <img src="assets/images/pic(1).png" alt="about3" class="about__block3-img"/>
+                <img src="assets/images/pic(2).jpg" alt="about3" class="about__block3-img"/>
             </picture>
             <div class="about__block3-content">
-                <p class="about__block3-text"></p>
+                <p class="about__block3-text">Мы уже успешно организовали и<br/>провели более 100 проектов.<br/>Посмотрите, как это было классно.</p>
                 <a href="#" class="about__block3-link">Смотреть</a>
             </div>
         </div>
