--- a/src/html/blocks/page-header.html
+++ b/src/html/blocks/page-header.html
@@ -10,9 +10,22 @@
             <a href="#" class="page-header__nav-link">Блог</a>
             <a href="#" class="page-header__nav-link">О нас</a>
             <a href="#" class="page-header__nav-link">Контакты</a>
+
+            <a href="#" class="page-header__nav-user-link">
+                Александр С.
+                <svg class="page-header__user-icon" width="24" height="24">
+                  <use xlink:href="assets/icons/symbols.svg#door"></use>
+                </svg>
+              </a>
         </nav>
         <div class="page-header__right-block">
-            <a href="#" class="page-header__btn btn">Войти</a>
+            <a href="#" class="page-header__user-btn btn">Войти</a>
+            <svg class="page-header__user-icon" width="21" height="18">
+                <use xlink:href="assets/icons/symbols.svg#user"></use>
+            </svg>
+            <button type="button" class="page-header__nav-toggle" id="js-navToggle">
+                <span class="page-header__nav-toggle-line"></span>
+            </button>
         </div>
     </div>
 </header>
