--- a/src/html/blocks/table.html
+++ b/src/html/blocks/table.html
@@ -1,21 +1,21 @@
-<table class="table @@class">
-    <thead class="table__thead">
-        <tr class="table__tr">
-            <td class="table__thead-th"></td>
-            <td class="table__thead-th">Тариф «Light»</td>
-            <td class="table__thead-th">Тариф «Promo»</td>
-            <td class="table__thead-th">Тариф «All stars»</td>
+<table class="table @@class events__rariffs-table">
+    <thead class="table__head">
+        <tr class="table__head-tr">
+            <td class="table__head-th"></td>
+            <td class="table__head-th">Тариф «Light»</td>
+            <td class="table__head-th">Тариф «Promo»</td>
+            <td class="table__head-th">Тариф «All stars»</td>
         </tr>
     </thead>
-    <tbody class="table__tbody">
+    <tbody class="table__body">
         <tr class="table__tr">
-            <th class="table__tbody-th">Стоимость за час</td>
+            <th class="table__body-th">Стоимость за час</td>
             <td class="table__td">1 000 ₽</td>
             <td class="table__td">3 000 ₽</td>
             <td class="table__td">от 6 000 ₽</td>
         </tr>
         <tr class="table__tr">
-            <th class="table__tbody-th">Ведущий мероприятия</th>
+            <th class="table__body-th">Ведущий мероприятия</th>
             <td class="table__td"></td>
             <td class="table__td">
                 <svg class="" width="26" height="26">
@@ -29,7 +29,7 @@
             </td>
         </tr>
         <tr class="table__tr">
-            <th class="table__tbody-th">Фотосъемка</th>
+            <th class="table__body-th">Фотосъемка</th>
             <td class="table__td">
                 <svg class="" width="26" height="26">
                     <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
@@ -47,46 +47,81 @@
             </td>
         </tr>
         <tr class="table__tr">
-            <th class="table__tbody-th">Видеосъемка</th>
+            <th class="table__body-th">Видеосъемка</th>
             <td class="table__td"></td>
             <td class="table__td"></td>
-            <td class="table__td"></td>
+            <td class="table__td">
+                <svg class="" width="26" height="26">
+                    <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
+                </svg>
+            </td>
         </tr>
         <tr class="table__tr">
-            <th class="table__tbody-th">Организация питания</th>
+            <th class="table__body-th">Организация питания</th>
             <td class="table__td"></td>
-            <td class="table__td"></td>
-            <td class="table__td"></td>
+            <td class="table__td">
+                <svg class="" width="26" height="26">
+                    <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
+                </svg>
+            </td>
+            <td class="table__td">
+                <svg class="" width="26" height="26">
+                    <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
+                </svg>
+            </td>
         </tr>
         <tr class="table__tr">
-            <th class="table__tbody-th">Декор</th>
+            <th class="table__body-th">Декор</th>
             <td class="table__td"></td>
             <td class="table__td"></td>
-            <td class="table__td"></td>
+            <td class="table__td">
+                <svg class="" width="26" height="26">
+                    <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
+                </svg>
+            </td>
         </tr>
         <tr class="table__tr">
-            <th class="table__tbody-th">Звуковое сопровождение</th>
+            <th class="table__body-th">Звуковое сопровождение</th>
             <td class="table__td"></td>
-            <td class="table__td"></td>
-            <td class="table__td"></td>
+            <td class="table__td">
+                <svg class="" width="26" height="26">
+                    <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
+                </svg>
+            </td>
+            <td class="table__td">
+                <svg class="" width="26" height="26">
+                    <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
+                </svg>
+            </td>
         </tr>
         <tr class="table__tr">
-            <th class="table__tbody-th">Дополнительное освещение</th>
+            <th class="table__body-th">Дополнительное освещение</th>
             <td class="table__td"></td>
             <td class="table__td"></td>
-            <td class="table__td"></td>
+            <td class="table__td">
+                <svg class="" width="26" height="26">
+                    <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
+                </svg>
+            </td>
         </tr>
         <tr class="table__tr">
-            <th class="table__tbody-th">Клининг</th>
+            <th class="table__body-th">Клининг</th>
             <td class="table__td"></td>
             <td class="table__td"></td>
-            <td class="table__td"></td>
+            <td class="table__td">
+                <svg class="" width="26" height="26">
+                    <use xlink:href="assets/icons/symbols.svg#checkmark"></use>
+                </svg>
+            </td>
         </tr>
     </tbody>
-    <tr class="table__tr">
-        <th class="table__tbody-th"></th>
-        <td class="table__td"></td>
-        <td class="table__td"></td>
-        <td class="table__td"></td>
-    </tr>
+    <tfoot class="table__footer">
+        <tr class="table__footer-tr">
+            <th class="table__footer-th"></th>
+            <td class="table__footer-th">Тариф «Light»</td>
+            <td class="table__footer-th">Тариф «Promo»</td>
+            <td class="table__footer-th">Тариф «All stars»</td>
+        </tr>
+    </tfoot>
+
 </table>
