--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -29,10 +29,12 @@
             <picture class="about__block3-picture">
                 <img src="assets/images/pic(2).jpg" alt="about3" class="about__block3-img"/>
             </picture>
-            <div class="about__block3-content">
                 <p class="about__block3-text">Мы уже успешно организовали и<br/>провели более 100 проектов.<br/>Посмотрите, как это было классно.</p>
-                <a href="#" class="about__block3-link">Смотреть</a>
-            </div>
+                <a href="#" class="about__block3-link">Смотреть
+                    <svg  width="91" height="60">
+                        <use xlink:href="assets/icons/symbols.svg#arrow"></use>
+                    </svg>
+                </a>
         </div>
     </div>
 </div>
