--- a/src/html/blocks/section-title.html
+++ b/src/html/blocks/section-title.html
@@ -1,7 +1,14 @@
-<H1  class="title sub-title">арт — пространство</H1>
-<div class="title__lenni">
-    <svg  width="1920" height="325">
-        <use xlink:href="assets/icons/symbols.svg#LENNI"></use>
-    </svg>
+<div class="title__container">
+    <H1  class="title sub-title">арт — пространство</H1>
+    <div class="title__lenni">
+        <svg  width="1920" height="325">
+            <use xlink:href="assets/icons/symbols.svg#LENNI"></use>
+        </svg>
+    </div>
+    <H2  class="title sub-title">для людей, горящих сердцем и делом<br/>место для настоящего</H2 >
+        <div class="title__i-want-container">
+            <div class="sub-title--small">Я хочу:</div>
+            <a href="#" class="title__btn--red btn">Провести мероприятие</a>
+            <a href="#" class="btn">Стать арендатором</a>
+        </div>
 </div>
-<H2  class="title sub-title">для людей, горящих сердцем и делом<br/>место для настоящего</H2 >
