--- a/src/html/events.html
+++ b/src/html/events.html
@@ -8,11 +8,15 @@
           <section class="listing events__listing">
             <h2 class="listing__title section-title">Мероприятия</h2>
             <div class="listing__events-list">
+              <!-- "img_tablet": "assets/images/events/theatre_nirvana.jpg",
+                  "img_webp": "assets/images/events/nirvana.webp",
+                  "img_tablet_webp": "assets/images/events/theatre_nirvana.webp", -->
               <!-- prettier-ignore -->
               @@loop('blocks/event-card.html', [
                 {
                   "class": "listing__event-card",
                   "img": "assets/images/events/nirvana.jpg",
+                  
                   "alt": "nirvana",
                   "title": "Собираемся и слушаем альбом Nirvana",
                   "descr": "Это третий альбом группы, выпущенный после смерти Курта Кобейна и первый, содержащий студийный материал.",
