--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -1,5 +1,6 @@
 <div class="about">
     <div class="about__container">
+        <H2 class="about__header">О нас</H2>
         <div class="about__block1">
             <h3 class="about__subtitle">Проект «Millennials»</h3>
             <p class="about__text">
@@ -29,9 +30,10 @@
             <picture class="about__block3-picture">
                 <img src="assets/images/pic(2).jpg" alt="about3" class="about__block3-img"/>
             </picture>
-                <p class="about__block3-text">Мы уже успешно организовали и<br/>провели более 100 проектов.<br/>Посмотрите, как это было классно.</p>
-                <a href="#" class="about__block3-link">Смотреть
-                    <svg  width="91" height="60">
+                <div class="about__block3-text">Мы уже успешно организовали и<br/>провели более 100 проектов.<br/>Посмотрите, как это было классно.</div>
+                <a href="#" class="about__block3-link">
+                    <div class="about__block3-link-text">Смотреть</div>
+                    <svg class="about__block3-link-arrow" width="91" height="60">
                         <use xlink:href="assets/icons/symbols.svg#arrow"></use>
                     </svg>
                 </a>
