--- a/src/html/blocks/section-title.html
+++ b/src/html/blocks/section-title.html
@@ -1,14 +1,17 @@
 <div class="title__container">
-    <H1  class="title sub-title">арт — пространство</H1>
+    <H1  class="title">арт — пространство</H1>
     <div class="title__lenni">
         <svg  width="1920" height="325">
             <use xlink:href="assets/icons/symbols.svg#LENNI"></use>
         </svg>
     </div>
-    <H2  class="title sub-title">для людей, горящих сердцем и делом<br/>место для настоящего</H2 >
+    <H2  class="title">для людей, горящих сердцем и делом<br/>место для настоящего</H2 >
         <div class="title__i-want-container">
-            <div class="sub-title--small">Я хочу:</div>
-            <a href="#" class="title__btn--red btn">Провести мероприятие</a>
-            <a href="#" class="btn">Стать арендатором</a>
+            <div class="title title--small">Я хочу:</div>
+            <div class="title-container__btn-container">
+                <a href="#" class="title__btn--red btn">Провести мероприятие</a>
+                <div class="title__empty-block"></div>
+                <a href="#" class="btn">Стать арендатором</a>
+            </div>
         </div>
 </div>
