--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -1,6 +1,6 @@
 <div class="about">
     <div class="about__container">
-        <H2 class="about__header">О нас</H2>
+        <H2 class="header about__header">О нас</H2>
         <div class="about__block1">
             <h3 class="about__subtitle">Проект «Millennials»</h3>
             <p class="about__text">
