--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,8 +6,9 @@
 	<main class="main">
     @@include('blocks/section-title.html')
     @@include('blocks/about.html')
+    @@include('blocks/events-short.html')
   </main>
-	@@include('blocks/page-footer.html')
+	<!-- @@include('blocks/page-footer.html') -->
   <!--@@include('blocks/event-pp.html')-->
   </body>
 </html>
