--- a/src/html/blocks/section-title.html
+++ b/src/html/blocks/section-title.html
@@ -8,7 +8,7 @@
     <H2  class="title">для людей, горящих сердцем и делом<br/>место для настоящего</H2 >
         <div class="title__i-want-container">
             <div class="title title--small">Я хочу:</div>
-            <div class="title-container__btn-container">
+            <div class="title__btn-container">
                 <a href="#" class="title__btn--red btn">Провести мероприятие</a>
                 <div class="title__empty-block"></div>
                 <a href="#" class="btn">Стать арендатором</a>
