--- a/src/html/event.html
+++ b/src/html/event.html
@@ -4,8 +4,20 @@
 	<body class="body">
 		@@include('blocks/page-header.html')
     	<main class="main">
+            <div>Главная  / Мероприятия / Вечер | The Best of Sade </div>
             <div class="event">
-                <div class="content">
+                <!-- <div class="event__header">
+                    <div> Вечер | The Best of Sade</div>
+                    <div>16/12/2022</div>
+                    <div>Кафе «Птичка» </div>
+                    <div>20.00</div>
+                    <picture class="">                    
+                        <img src="assets/images/events/Sade.jpg" alt="sade" class="" />
+                    </picture>
+                    <div>начало</div>
+                    <div>Ленина 10 | 2 этаж</div>
+                </div> -->
+                <!--<div class="content">-->
                     <h5>Программа мероприятия:</h5>
                     <ol>
                         <il>20:15 — Приветствие гостей</il>
@@ -18,13 +30,31 @@
                         <il>23:00 — Завершение вечера</il>
                     </ol>
                     <h5>The Best Of Sade</h5>
-                    <p>Первый альбом-компиляция Sade, выпущенный в 1994 году. Он содержит 9 треков, включая самые популярные хиты группы, раритеты и их любимые треки. </p>
-                    <p>Группа продемонстрировала необычайное долголетие и креативность своей творческой карьеры. Она лидировала музыкальных чартах с 1994 по 1995 год, став четырехкратно платиновой в США и продав более 2 миллионов копий в Европе.</p>
-                </div>
+                    <p>Первый альбом-компиляция Sade, выпущенный в 1994 году. Он содержит 9 треков, включая самые популярные хиты группы, 
+                        раритеты и их любимые треки. </p>
+                    <p>Группа продемонстрировала необычайное долголетие и креативность своей творческой карьеры. Она лидировала 
+                        музыкальных чартах с 1994 по 1995 год, став четырехкратно платиновой в США и продав более 2 миллионов копий в Европе.</p>
+                    <ul>
+                        <il>Your Love Is King</il>
+                        <il>Hang On To Your Love</il>
+                        <il>Smooth Operator</il>
+                        <il>Jezebel</il>
+                        <il>The Sweetest Taboo</il>
+                        <il>Is It A Crime</il>
+                        <il>Never As Good As The First Time</il>
+                        <il>Love Is Stronger Than Pride</il>
+                        <il>Paradise</il>
+                    </ul>
+                <!--</div>-->
                 <article class="">
                     <form class="reserve">
                         <div class="reserve__check">1</div>
-                        <div class="reserve__scheme">1</div>
+                        <div class="reserve__scheme">
+                            <h6>Сцена</h6>
+                            <svg class="page-header__logo-icon" width="780" height="399">
+                                <use xlink:href="assets/icons/symbols.svg#map"></use>
+                            </svg>
+                        </div>
                         <div class="reserve__order">1</div>
                         <div class="reserve__legend">1</div>
                     </form>
