--- a/src/html/blocks/events-short.html
+++ b/src/html/blocks/events-short.html
@@ -3,7 +3,7 @@
 </svg> -->
 <div class="events-short">
     <div class="events-short__container">
-        <h2 class="header events-short__header">МЕРОПРИЯТИЯ</h2>
+        <h2 class="header header__h2 events-short__header">МЕРОПРИЯТИЯ</h2>
         <div class="listing__events-list">
             <!-- prettier-ignore -->
             @@loop('event-card.html', [
