--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
     @@include('blocks/about.html')
     @@include('blocks/events-short.html')
   </main>
-	<!-- @@include('blocks/page-footer.html') -->
+  @@include('blocks/page-footer.html')
   <!--@@include('blocks/event-pp.html')-->
   </body>
 </html>
