--- a/src/html/blocks/page-footer.html
+++ b/src/html/blocks/page-footer.html
@@ -9,42 +9,42 @@
             <a href="#" class="page-footer__block1-link">Контакты</a>
         </div>
         <form class="page-footer__subscribe-form subscribe-form">
-            <h4 class="subscribe-form__title"></h4>
+            <h4 class="subscribe-form__title">Подпишись и будь в курсе происходящего</h4>
             <div class="subscribe-form__wrapper">
                 <div class="subscribe-form__field-wrapper">
-                    <input name="email" type="email" placeholder="Email" class="subscribe-form-input" required />
-                    <button type="submit" class="subscribe-form__submit">Подписаться</button>
+                    <input name="email" type="email" placeholder="Email" class="subscribe-form-input field__input" required />
+                    <button type="submit" class="subscribe-form__submit ">Подписаться</button>
                 </div>
                 <label class="subscribe-form__check check">
                     <input name="agree" type="checkbox" class="check__input" required checked/>
                     <span class="check__mark"></span> 
-                    <span class="ckeck__label">Согласен на обработку персональных данных</span>
+                    <span class="check__label">Согласен на обработку персональных данных</span>
                 </label>
             </div>
         </form>
     </div>
     <div class="page-footer__block2">
         <div class="page-footer__socials socials">
-            <a href="#" class="page-footer__social social">
-                <svg class="page-header__logo-icon" width="24" height="24">
+            <!-- <a href="#" class="page-footer__social social">
+                <svg class="page-header__logo-icon" width="58" height="58">
                     <use xlink:href="assets/icons/symbols.svg#insta"></use>
                 </svg>
             </a>
             <a href="#" class="page-footer__social socials">
-                <svg class="page-header__logo-icon" width="24" height="24">
+                <svg class="page-header__logo-icon" width="58" height="58">
                     <use xlink:href="assets/icons/symbols.svg#vk"></use>
                 </svg>
-            </a>
+            </a> -->
         </div>
         <div class="page-footer__block2-links">
             <a href="#" class="page-footer__block2-links">Политика конфиденциальности</a>
             <a href="#" class="page-footer__block2-links">Cookies</a>
             <div class="page-footer__copirite">© Millennials 2022</div>
-            <div class="page-footer__create-link">
-                <svg class="page-header__logo-icon" width="56" height="17">
+            <div class="page-footer__create-link">Создание и продвижение
+                <!-- <svg class="page-header__logo-icon" width="56" height="17">
                     <use xlink:href="assets/icons/symbols.svg#tagree"></use>
                 </svg>
-            </div>
+            </div> -->
         </div>
     </div>
 </footer>
