--- a/src/html/blocks/page-footer.html
+++ b/src/html/blocks/page-footer.html
@@ -25,26 +25,26 @@
     </div>
     <div class="page-footer__block2">
         <div class="page-footer__socials socials">
-            <!-- <a href="#" class="page-footer__social social">
+            <a href="#" class="page-footer__social social">
                 <svg class="page-header__logo-icon" width="58" height="58">
                     <use xlink:href="assets/icons/symbols.svg#insta"></use>
                 </svg>
             </a>
-            <a href="#" class="page-footer__social socials">
+            <a href="#" class="page-footer__social social">
                 <svg class="page-header__logo-icon" width="58" height="58">
                     <use xlink:href="assets/icons/symbols.svg#vk"></use>
                 </svg>
-            </a> -->
+            </a>
         </div>
         <div class="page-footer__block2-links">
             <a href="#" class="page-footer__block2-links">Политика конфиденциальности</a>
             <a href="#" class="page-footer__block2-links">Cookies</a>
             <div class="page-footer__copirite">© Millennials 2022</div>
             <div class="page-footer__create-link">Создание и продвижение
-                <!-- <svg class="page-header__logo-icon" width="56" height="17">
+                <svg class="page-header__logo-icon" width="56" height="17">
                     <use xlink:href="assets/icons/symbols.svg#tagree"></use>
                 </svg>
-            </div> -->
+            </div>
         </div>
     </div>
 </footer>
