--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
     @@include('blocks/section-title.html')
     @@include('blocks/about.html')
     @@include('blocks/events-short.html')
+    @@include('blocks/do-it.html')<!--, {"class:" "home__do-it"}-->
   </main>
   @@include('blocks/page-footer.html')
   <!--@@include('blocks/event-pp.html')-->
