--- a/src/html/event.html
+++ b/src/html/event.html
@@ -5,124 +5,130 @@
 		@@include('blocks/page-header.html')
     	<main class="main">
             <div class="event">
-            <div class="link-url">Главная  / Мероприятия / Вечер | The Best of Sade </div>
-                        <div class="event__header">
-                <div> Вечер | The Best of Sade</div>
-                <div>16/12/2022</div>
-                <div>Кафе «Птичка» </div>
-                <div>20.00</div>
-                <picture class="">                    
-                    <img src="assets/images/events/Sade.jpg" alt="sade" class="" />
-                </picture>
-                <div>начало</div>
-                <div>Ленина 10 | 2 этаж</div>
-            </div> 
-            <div class="content">
-            <article class="article">
-                <div class="article__container">
-                    <div class="article__content content">
-                        <h5>Программа мероприятия:</h5>
-                        <ul>
-                            <li>20:15 — Приветствие гостей</li>
-                            <li>20:30 — Первая подача блюд | Салаты</li>
-                            <li>20:40 — Живой вокал | Композиции 1-3</li>
-                            <li>21:20 — Подача горячих блюд</li>
-                            <li>21:30 — Живой вокал | Композиции 4-7</li>
-                            <li>22:15 — Подача десерта</li>
-                            <li>22:30 — Живой вокал | Композиции 8-9</li>
-                            <li>23:00 — Завершение вечера</li>
-                        </ul>
-                        <h5>The Best Of Sade</h5>
-                        <p>Первый альбом-компиляция Sade, выпущенный в 1994 году. Он содержит 9 треков, включая самые популярные хиты группы, 
-                            раритеты и их любимые треки. </p>
-                        <p>Группа продемонстрировала необычайное долголетие и креативность своей творческой карьеры. Она лидировала 
-                            музыкальных чартах с 1994 по 1995 год, став четырехкратно платиновой в США и продав более 2 миллионов копий в Европе.</p>
-                        <ol>
-                            <li>Your Love Is King</li>
-                            <li>Hang On To Your Love</li>
-                            <li>Smooth Operator</li>
-                            <li>Jezebel</li>
-                            <li>The Sweetest Taboo</li>
-                            <li>Is It A Crime</li>
-                            <li>Never As Good As The First Time</li>
-                            <li>Love Is Stronger Than Pride</li>
-                            <li>Paradise</li>
-                        </ol>
+                <div class="event-url">Главная  / Мероприятия / Вечер | The Best of Sade </div>
+                <div class="event__header">
+                    <div class="event__header-main"> Вечер | The Best of Sade</div>
+                    <div class="event__image-container">
+                        <div class="event__header-sub-container">
+                            <div class="event__header-sub event__header-sub--top">16/12/2022</div>
+                            <div class="event__header-sub event__header-sub--bottom">Кафе «Птичка» </div> 
+                        </div>
+                        <picture class="event-image">                    
+                            <img src="assets/images/events/Sade.jpg" alt="sade" class="" />
+                        </picture>
+                        <div class="event__header-sub-container">
+                            <div class="event__header-">20.00</div>
+                            <div class="event__header-">начало</div>
+                            <div class="event__header-">Ленина 10 | 2 этаж</div>
+                        </div>
                     </div>
-                </div>
                 <div class="content">
-                    <form class="reserve form">
-                        <div class="reserve__check">
-                            <h5 class="">Забронировать столик</h5>
-                            <div class="reserve__check-list">
-                                <label class="check check">
-                                    <input name="agree" type="checkbox" class="check__input--red check__input" checked/>
-                                    <span class="check__mark--red check__mark"></span> 
-                                    <span class="reserve__check-label check__label--red check__label">1 стол</span>
-                                </label>
-                                <label class="check check">
-                                    <input name="agree" type="checkbox" class="check__input"/>
-                                    <span class="check__mark"></span> 
-                                    <span class="reserve__check-label check__label">2 стол</span>
-                                </label>
-                                <label class="check">
-                                    <input name="agree" type="checkbox" class="check__input"/>
-                                    <span class="check__mark"></span> 
-                                    <span class="reserve__check-label check__label">3 стол</span>
-                                </label>
-                                <label class="check check--red">
-                                    <input name="agree" type="checkbox" class="check__input"/>
-                                    <span class="check__mark"></span> 
-                                    <span class="reserve__check-label check__label">4 стол</span>
-                                </label>
-                                <label class="check--gray check">
-                                    <span class="check__mark--gray check__mark"></span> 
-                                    <span class="reserve__check-label check__label--gray check__label">5 стол</span>
-                                </label>
-                                <label class="check">
-                                    <input name="agree" type="checkbox" class="check__input"/>
-                                    <span class="check__mark"></span> 
-                                    <span class="reserve__check-label check__label">6 стол</span>
-                                </label>
-                                <label class="check check--red">
-                                    <input name="agree" type="checkbox" class="check__input--red check__input" checked/>
-                                    <span class="check__mark--red check__mark"></span> 
-                                    <span class="reserve__check-label check__label--red check__label">7 стол</span>
-                                </label>
-                                </label>
-                                <label class="check check--red">
-                                    <input name="agree" type="checkbox" class="check__input--red check__input" checked/>
-                                    <span class="check__mark--red check__mark"></span> 
-                                    <span class="reserve__check-label check__label--red check__label">8 стол</span>
-                                </label>
-                                <label class="check check--red">
-                                    <input name="agree" type="checkbox" class="check__input--red check__input" checked/>
-                                    <span class="check__mark--red check__mark"></span> 
-                                    <span class="reserve__check-label check__label--red check__label">9 стол</span>
-                                </label>
-                                <label class="check">
-                                    <input name="agree" type="checkbox" class="check__input" checked/>
-                                    <span class="check__mark"></span> 
-                                    <span class="reserve__check-label check__label">10 стол</span>
-                                </label>
-                                <label class="check">
-                                    <input name="agree" type="checkbox" class="check__input"/>
-                                    <span class="check__mark"></span> 
-                                    <span class="reserve__check-label check__label">11 стол</span>
-                                </label>
+                <article class="article">
+                    <div class="article__container">
+                        <div class="article__content content">
+                            <h5>Программа мероприятия:</h5>
+                            <ul>
+                                <li>20:15 — Приветствие гостей</li>
+                                <li>20:30 — Первая подача блюд | Салаты</li>
+                                <li>20:40 — Живой вокал | Композиции 1-3</li>
+                                <li>21:20 — Подача горячих блюд</li>
+                                <li>21:30 — Живой вокал | Композиции 4-7</li>
+                                <li>22:15 — Подача десерта</li>
+                                <li>22:30 — Живой вокал | Композиции 8-9</li>
+                                <li>23:00 — Завершение вечера</li>
+                            </ul>
+                            <h5>The Best Of Sade</h5>
+                            <p>Первый альбом-компиляция Sade, выпущенный в 1994 году. Он содержит 9 треков, включая самые популярные хиты группы, 
+                                раритеты и их любимые треки. </p>
+                            <p>Группа продемонстрировала необычайное долголетие и креативность своей творческой карьеры. Она лидировала 
+                                музыкальных чартах с 1994 по 1995 год, став четырехкратно платиновой в США и продав более 2 миллионов копий в Европе.</p>
+                            <ol>
+                                <li>Your Love Is King</li>
+                                <li>Hang On To Your Love</li>
+                                <li>Smooth Operator</li>
+                                <li>Jezebel</li>
+                                <li>The Sweetest Taboo</li>
+                                <li>Is It A Crime</li>
+                                <li>Never As Good As The First Time</li>
+                                <li>Love Is Stronger Than Pride</li>
+                                <li>Paradise</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <form class="reserve form">
+                            <div class="reserve__check">
+                                <h5 class="">Забронировать столик</h5>
+                                <div class="reserve__check-list">
+                                    <label class="check check">
+                                        <input name="agree" type="checkbox" class="check__input--red check__input" checked/>
+                                        <span class="check__mark--red check__mark"></span> 
+                                        <span class="reserve__check-label check__label--red check__label">1 стол</span>
+                                    </label>
+                                    <label class="check check">
+                                        <input name="agree" type="checkbox" class="check__input"/>
+                                        <span class="check__mark"></span> 
+                                        <span class="reserve__check-label check__label">2 стол</span>
+                                    </label>
+                                    <label class="check">
+                                        <input name="agree" type="checkbox" class="check__input"/>
+                                        <span class="check__mark"></span> 
+                                        <span class="reserve__check-label check__label">3 стол</span>
+                                    </label>
+                                    <label class="check check--red">
+                                        <input name="agree" type="checkbox" class="check__input"/>
+                                        <span class="check__mark"></span> 
+                                        <span class="reserve__check-label check__label">4 стол</span>
+                                    </label>
+                                    <label class="check--gray check">
+                                        <span class="check__mark--gray check__mark"></span> 
+                                        <span class="reserve__check-label check__label--gray check__label">5 стол</span>
+                                    </label>
+                                    <label class="check">
+                                        <input name="agree" type="checkbox" class="check__input"/>
+                                        <span class="check__mark"></span> 
+                                        <span class="reserve__check-label check__label">6 стол</span>
+                                    </label>
+                                    <label class="check check--red">
+                                        <input name="agree" type="checkbox" class="check__input--red check__input" checked/>
+                                        <span class="check__mark--red check__mark"></span> 
+                                        <span class="reserve__check-label check__label--red check__label">7 стол</span>
+                                    </label>
+                                    </label>
+                                    <label class="check check--red">
+                                        <input name="agree" type="checkbox" class="check__input--red check__input" checked/>
+                                        <span class="check__mark--red check__mark"></span> 
+                                        <span class="reserve__check-label check__label--red check__label">8 стол</span>
+                                    </label>
+                                    <label class="check check--red">
+                                        <input name="agree" type="checkbox" class="check__input--red check__input" checked/>
+                                        <span class="check__mark--red check__mark"></span> 
+                                        <span class="reserve__check-label check__label--red check__label">9 стол</span>
+                                    </label>
+                                    <label class="check">
+                                        <input name="agree" type="checkbox" class="check__input" checked/>
+                                        <span class="check__mark"></span> 
+                                        <span class="reserve__check-label check__label">10 стол</span>
+                                    </label>
+                                    <label class="check">
+                                        <input name="agree" type="checkbox" class="check__input"/>
+                                        <span class="check__mark"></span> 
+                                        <span class="reserve__check-label check__label">11 стол</span>
+                                    </label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="reserve__scheme">
-                            <h5 class="reserve__header header__h4 header">Сцена</h5>
-                            <svg class="page-header__logo-icon" width="780" height="399">
-                                <use xlink:href="assets/icons/symbols.svg#map"></use>
-                            </svg>
-                        </div>
-                        <div class="reserve__order">1</div>
-                        <div class="reserve__legend">1</div>
-                    </form>
-                </div>
-            </article>
+                            <div class="reserve__scheme">
+                                <h5 class="reserve__header header__h4 header">Сцена</h5>
+                                <svg class="page-header__logo-icon" width="780" height="399">
+                                    <use xlink:href="assets/icons/symbols.svg#map"></use>
+                                </svg>
+                            </div>
+                            <div class="reserve__order">order</div>
+                            <div class="reserve__legend">legend</div>
+                        </form>
+                    </div>
+                </article>
+            </div>
         </div>
         </main>
         @@include('blocks/page-footer.html')
