--- a/src/html/events.html
+++ b/src/html/events.html
@@ -5,8 +5,9 @@
 		@@include('blocks/page-header.html')
     	<main class="main">
         <div class="events">
+          <div>Главная  / Мероприятия</div>
           <section class="listing events__listing">
-            <h2 class="listing__title section-title">Мероприятия</h2>
+            <h2 class="header__h2 header">Мероприятия</h2>
             <div class="listing__events-list">
               <!-- "img_tablet": "assets/images/events/theatre_nirvana.jpg",
                   "img_webp": "assets/images/events/nirvana.webp",
@@ -73,6 +74,8 @@
           </section>
         </div>
         @@include('blocks/table.html', {"class": "events-tariffs-table"})
+        <div>Я хочу:</div>
+<div>Цены</div>
 		  </main>
       @@include('blocks/page-footer.html')
       <!-- @@include('blocks/event-pp.html') -->
