--- a/src/html/blocks/section-title.html
+++ b/src/html/blocks/section-title.html
@@ -9,7 +9,7 @@
         <div class="title__i-want-container">
             <div class="title title--small">Я хочу:</div>
             <div class="title__btn-container">
-                <a href="#" class="title__btn--red btn">Провести мероприятие</a>
+                <a href="#" class="btn--red btn">Провести мероприятие</a>
                 <div class="title__empty-block"></div>
                 <a href="#" class="btn">Стать арендатором</a>
             </div>
