--- a/src/html/event.html
+++ b/src/html/event.html
@@ -6,20 +6,23 @@
     	<main class="main">
             <div class="event">
                 <div class="event-url">Главная  / Мероприятия / Вечер | The Best of Sade </div>
-                <div class="event__header">
-                    <div class="event__header-main"> Вечер | The Best of Sade</div>
-                    <div class="event__image-container">
-                        <div class="event__header-sub-container">
-                            <div class="event__header-sub event__header-sub--top">16/12/2022</div>
-                            <div class="event__header-sub event__header-sub--bottom">Кафе «Птичка»</div> 
-                        </div>
-                        <picture class="event-image">                    
-                            <img src="assets/images/events/Sade.jpg" alt="sade" class="" />
-                        </picture>
-                        <div class="event__header-sub-container">
-                            <div class="event__header-">20.00</div>
-                            <div class="event__header-">начало</div>
-                            <div class="event__header-">Ленина 10 | 2 этаж</div>
+                    <div class="event__header">
+                        <div class="event__header-main"> Вечер | The Best of Sade</div>
+                        <div class="event__image-container">
+                            <div class="event__header-sub-container">
+                                <div class="event__header-sub event__header-sub--top">16/12/2022</div>
+                                <div class="event__header-sub event__header-sub--bottom">Кафе «Птичка»</div> 
+                            </div>
+                            <picture class="event-image">                    
+                                <img src="assets/images/events/Sade.jpg" alt="sade" class="" />
+                            </picture>
+                            <div class="event__header-sub-container">
+                                <div class="event__header-sub-line">
+                                    <div class="event__header-sub event__header-sub--top">20.00</div>
+                                    <div class="event__header-sub event__header-sub--bottom">начало</div>
+                                </div>
+                                <div class="event__header-sub event__header-sub--bottom">Ленина 10 | 2 этаж</div>
+                            </div>
                         </div>
                     </div>
                 <div class="content">
@@ -123,8 +126,49 @@
                                     <use xlink:href="assets/icons/symbols.svg#map"></use>
                                 </svg>
                             </div>
-                            <div class="reserve__order">order</div>
-                            <div class="reserve__legend">legend</div>
+                            <div class="reserve__order">
+                                <h5>Ваши пригласительные билеты</h5>
+                                <div class="reserve__order-items">
+                                    <div class="reserve__order-item">
+                                        <div class="reserve__order-item-amount">9 шт. | 1400</div>
+                                        <div class="reserve__order-item-sum">12 600</div>
+                                    </div>
+                                    <div class="reserve__order-item">
+                                        <div class="reserve__order-item-amount">4 шт. | 1250</div>
+                                        <div class="reserve__order-item-sum">5000</div>
+                                    </div>
+                                </div>
+                                <div class="reserve__order-sum-wrapper">
+                                    <div class="reserve__order-sum-word">Сумма</div>
+                                    <div class="reserve__order-sum-number">17 600</div>
+                                </div>
+                                <a href="#" class="btn--red btn reserve__order-sum-buy">Купить билеты</a>
+                            </div>
+                            <div class="reserve__legend">
+                                <h5>Стоимость пригласительного билета</h5>
+                                <div class="reserve__legend-lines">
+                                    <div class="reserve__legend-line">
+                                        <span class="reserve__legend-box-red"></span>
+                                        <div class="reserve__legend-text">1400 ₽ | 1 персона</div>
+                                    </div>
+                                    <div class="reserve__legend-line">
+                                        <span class="reserve__legend-box-black"></span>
+                                        <div class="reserve__legend-text">1250 ₽ | 1 персона</div>
+                                    </div>
+                                </div>
+                                <h5>Примечание</h5>
+                                <div class="reserve__legend-lines">
+                                    <div class="reserve__legend-line">
+                                        <span class="reserve__legend-circle-black"></span>
+                                        <span class="reserve__legend-circle-red"></span>
+                                        <div class="reserve__legend-text">доступные места</div>
+                                    </div>
+                                    <div class="reserve__legend-line">
+                                        <span class="reserve__legend-circle"></span>
+                                        <div class="reserve__legend-text">забронировано</div>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </article>
