--- a/src/html/events.html
+++ b/src/html/events.html
@@ -88,42 +88,42 @@
         <div class="listing__i-want title__i-want-container">
           <div class="title title--small">Я хочу:</div>
           <div class="title__btn-container">
-              <a href="#" class="title__btn--red btn">Провести мероприятие</a>
+              <a href="#" class="btn--red btn">Провести мероприятие</a>
               <div class="title__empty-block"></div>
               <a href="#" class="btn">Стать арендатором</a>
           </div>
         </div>
-        <div class="listing__bottom">
-          <div class="listing__bottom-element">
-            <svg class="listing__bottom-element-icon" width="110" height="110">
-              <use xlink:href="assets/icons/symbols.svg#information"></use>
-            </svg>
-            <div class="listing__bottom-element-title">Цены</div>
-            <div class="listing__bottom-element-desc">
-              Цены, указанные на сайте носят информационный характер. 
-              Мы придерживаемся индивидуального подхода в работе с клиентом.
-            </div>
-          </div>
-          <div class="listing__bottom-element">
-            <svg class="listing__bottom-element-icon" width="110" height="110">
-              <use xlink:href="assets/icons/symbols.svg#contact"></use>
-            </svg>
-            <div class="listing__bottom-element-title">Контакты</div>
-            <div class="listing__bottom-element-desc">
-              Отдел организации мероприятий<br/>+7 499 350 0730<br/>hi@tagree.ru
-            </div>
-          </div>
-          <div class="listing__bottom-element">
-            <svg class="listing__bottom-element-icon" width="110" height="110">
-              <use xlink:href="assets/icons/symbols.svg#handshake"></use>
-            </svg>
-            <div class="listing__bottom-element-title">Преимущество</div>
-            <div class="listing__bottom-element-desc">
-              Мы имеем все возможности для того, чтобы помочь как малому 
-              бизнесу и молодым талантам, так и большим корпорациям и холдингам.
-            </div>
+      <div class="listing__bottom">
+        <div class="listing__bottom-element">
+          <svg class="listing__bottom-element-icon" width="110" height="110">
+            <use xlink:href="assets/icons/symbols.svg#information"></use>
+          </svg>
+          <div class="listing__bottom-element-title">Цены</div>
+          <div class="listing__bottom-element-desc">
+            Цены, указанные на сайте носят информационный характер. 
+            Мы придерживаемся индивидуального подхода в работе с клиентом.
           </div>
         </div>
+        <div class="listing__bottom-element">
+          <svg class="listing__bottom-element-icon" width="110" height="110">
+            <use xlink:href="assets/icons/symbols.svg#contact"></use>
+          </svg>
+          <div class="listing__bottom-element-title">Контакты</div>
+          <div class="listing__bottom-element-desc">
+            Отдел организации мероприятий<br/>+7 499 350 0730<br/>hi@tagree.ru
+          </div>
+        </div>
+        <div class="listing__bottom-element">
+          <svg class="listing__bottom-element-icon" width="110" height="110">
+            <use xlink:href="assets/icons/symbols.svg#handshake"></use>
+          </svg>
+          <div class="listing__bottom-element-title">Преимущество</div>
+          <div class="listing__bottom-element-desc">
+            Мы имеем все возможности для того, чтобы помочь как малому 
+            бизнесу и молодым талантам, так и большим корпорациям и холдингам.
+          </div>
+        </div>
+      </div>
 		  </main>
       @@include('blocks/page-footer.html')
       <!-- @@include('blocks/event-pp.html') -->
