--- a/src/html/blocks/promo.html
+++ b/src/html/blocks/promo.html
@@ -1,7 +1,7 @@
 <header class="promo">
     <H1  class="promo__title">арт — пространство</H1>
     <picture class="promo__picture">
-        <img src="assets/images/LENNI.svg" alt="logo" class="promo__img">
+        <img src="assets/images/LENNI.png" alt="logo" class="promo__img">
     </picture>
     <H2 class="promo__text">для людей, горящих сердцем и делом<br/>место для настоящего</H2>
         <div class="promo__i-want-container">
