--- a/src/html/events.html
+++ b/src/html/events.html
@@ -85,14 +85,15 @@
               мероприятия на высшем уровне.</div>
         
         @@include('blocks/table.html', {"class": "events-tariffs-table"})
-        <div class="listing__i-want title__i-want-container">
-          <div class="title title--small">Я хочу:</div>
-          <div class="title__btn-container">
+        <div class="promo__i-want-container listing__i-want">
+          <div class="promo__text promo__text--small">Я хочу:</div>
+          <div class="promo__btn-container">
               <a href="#" class="btn--red btn">Провести мероприятие</a>
-              <div class="title__empty-block"></div>
+              <div class="promo__empty-block"></div>
               <a href="#" class="btn">Стать арендатором</a>
           </div>
         </div>
+      </div>
       <div class="listing__bottom">
         <div class="listing__bottom-element">
           <svg class="listing__bottom-element-icon" width="110" height="110">
@@ -110,7 +111,9 @@
           </svg>
           <div class="listing__bottom-element-title">Контакты</div>
           <div class="listing__bottom-element-desc">
-            Отдел организации мероприятий<br/>+7 499 350 0730<br/>hi@tagree.ru
+            Отдел организации мероприятий<br/>
+            <a href="tel:74993500730" class="listing__bottom-element-desc-link">+7 499 350 0730</a><br/>
+            <a href="mailto:hi@tagree.ru" class="listing__bottom-element-desc-link">hi@tagree.ru</a>
           </div>
         </div>
         <div class="listing__bottom-element">
