--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,16 +2,17 @@
  <html lang="ru"><!--class="show-event-popup" -->
   <head>@@include('blocks/head.html')</head>
   <body class="body">
-	@@include('blocks/page-header.html')
-	<main class="main">
-    @@include('blocks/promo.html')
-    @@include('blocks/about.html')
-    @@include('blocks/events-short.html')
-    @@include('blocks/blog-listing.html', {"class": "home__blog-listing"})
-    @@include('blocks/contacts.html')
-    @@include('blocks/do-it.html', {"class": "home__do-it"})
-  </main>
-  @@include('blocks/page-footer.html')
-  <!--@@include('blocks/event-pp.html')-->
+    @@include('blocks/page-header.html')
+    <main class="main">
+      @@include('blocks/promo.html')
+      @@include('blocks/about.html')
+      @@include('blocks/events-short.html')
+      @@include('blocks/blog-listing.html', {"class": "home__blog-listing"})
+      @@include('blocks/contacts.html')
+      @@include('blocks/do-it.html', {"class": "home__do-it"})
+    </main>
+    @@include('blocks/page-footer.html')
+    <!--@@include('blocks/event-pp.html')-->
+    <script src="scripts/main.min.js"></script>
   </body>
 </html>
