--- a/src/html/blocks/event-pp.html
+++ b/src/html/blocks/event-pp.html
@@ -1,4 +1,4 @@
-<div class="pp" id="eventPP">
+<div class="pp" id="js-eventPP">
     <div class="pp__wrapper">
         <div class="pp__sticky-close">
             <button type="button" title="Закрыть" class="pp__x-btn x-btn js-ppCloseBtn">
@@ -9,7 +9,7 @@
         </div>
         <div class="pp__container">
             <H2 class="pp__title">Заполните форму<br />и мы подберем площадку</H2>
-            <form class="pp__form form">
+            <form class="pp__form form" id="js-eventForm">
                 <div class="form__list">
                     <div class="form__field form__field--w50">
                         <div class="radio">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="form__btns">
                     <button class="form__btn btn" type="submit">Отправить</button>
-                    <button class="form__btn-close" type="button">Закрыть</button>
+                    <button class="form__btn-close js-ppCloseBtn" type="button">Закрыть</button>
                 </div>
             </form>
         </div>
