--- a/src/html/blocks/promo.html
+++ b/src/html/blocks/promo.html
@@ -7,7 +7,7 @@
         <div class="promo__i-want-container">
             <div class="promo__text promo__text--small">Я хочу:</div>
             <div class="promo__btn-container">
-                <a href="#" class="btn--red btn">Провести мероприятие</a>
+                <button type="button" href="#" class="btn--red btn" id="js-eventOpenBtn">Провести мероприятие</button>
                 <div class="promo__empty-block"></div>
                 <a href="#" class="btn">Стать арендатором</a>
             </div>
