--- a/src/html/blocks/contacts.html
+++ b/src/html/blocks/contacts.html
@@ -33,13 +33,6 @@
                 </div>
             </div>
         </div>
-        <div class="contacts__map">
-            <img 
-                width="752" 
-                height="493"
-                class=""
-                src="assets/images/Frame 1994 1.png"
-             >
-        </div>
+        <div class="contacts__map" id="js-contactsMap"></div>
     </div>
 </div>
