--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,6 +16,7 @@
     </main>
     @@include('blocks/page-footer.html')
     
+    <script src="https://maps.googleapis.com/maps/api/js?key="></script>
     <script src="scripts/swiper.min.js"></script>
     <script src="scripts/main.min.js"></script>
   </body>
