--- a/src/html/event.html
+++ b/src/html/event.html
@@ -5,7 +5,7 @@
 		@@include('blocks/page-header.html')
     	<main class="main">
             <div class="event">
-                <div class="event-url">Главная  / Мероприятия / Вечер | The Best of Sade </div>
+                <div class="event__url">Главная  / Мероприятия / Вечер | The Best of Sade </div>
                     <div class="event__header">
                         <div class="event__header-main"> Вечер | The Best of Sade</div>
                         <div class="event__image-container">
@@ -13,7 +13,7 @@
                                 <div class="event__header-sub event__header-sub--top">16/12/2022</div>
                                 <div class="event__header-sub event__header-sub--bottom">Кафе «Птичка»</div> 
                             </div>
-                            <picture class="event-image">                    
+                            <picture class="event__image">                    
                                 <img src="assets/images/events/Sade.jpg" alt="sade" class="" />
                             </picture>
                             <div class="event__header-sub-container">
