--- a/src/html/event.html
+++ b/src/html/event.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="reserve__scheme">
                                 <h5 class="reserve__header header__h4 header">Сцена</h5>
-                                <svg class="" width="780" height="399">
+                                <svg class="reserve__scheme-map" width="780" height="399">
                                     <use xlink:href="assets/icons/symbols.svg#map"></use>
                                 </svg>
                             </div>
