--- a/src/html/default.html
+++ b/src/html/default.html
@@ -48,7 +48,17 @@
                 </div>
             </div>
         </article>
+        
     </main>
-	@@include('blocks/page-footer.html')
+	@@include('blocks/page-footer.html')\
+    <script src="scripts/jquery-3.7.1.min.js"></script>
+    <script src="scripts/jquery.selectric.min.js"></script>
+    <script src="scripts/jquery.mask.min.js"></script>
+    <script src="scripts/jquery.validate.min.js"></script>
+    <script src="scripts/jquery.validate-init.js"></script>
+    <script src="scripts/air-datepicker.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key="></script>
+    <script src="scripts/swiper.min.js"></script>
+    <script src="scripts/main.min.js"></script>
   </body>
 </html>
