--- a/src/html/events.html
+++ b/src/html/events.html
@@ -4,6 +4,7 @@
 	<body class="body">
 		@@include('blocks/page-header.html')
     	<main class="main">
+        @@include('blocks/event-pp.html')
         <div class="events">
           <div class="events__url">Главная  / Мероприятия</div>
           <section class="listing events__listing">
@@ -138,6 +139,15 @@
       </div>
 		  </main>
       @@include('blocks/page-footer.html')
-      <!-- @@include('blocks/event-pp.html') -->
+      <script src="scripts/jquery-3.7.1.min.js"></script>
+      <script src="scripts/jquery.selectric.min.js"></script>
+      <script src="scripts/jquery.mask.min.js"></script>
+      <script src="scripts/jquery.validate.min.js"></script>
+      <script src="scripts/jquery.validate-init.js"></script>
+      <script src="scripts/air-datepicker.min.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key="></script>
+      <script src="scripts/swiper.min.js"></script>
+      <script src="scripts/main.min.js"></script>
+      
 	</body>
 </html>
