--- a/src/html/blocks/promo.html
+++ b/src/html/blocks/promo.html
@@ -1,7 +1,8 @@
 <header class="promo">
-    <H1  class="promo__title">арт — пространство</H1>
-    <img src="assets/images/LENNI.png" alt="logo" class="promo__image" >
-    <H2 class="promo__title promo__title-2">для людей, горящих сердцем и делом<br/>место для настоящего</H2>
+    <div class="promo__container">
+        <H1  class="promo__title">арт — пространство</H1>
+        <img src="assets/images/LENNI.png" alt="logo" class="promo__image" >
+        <H2 class="promo__title promo__title-2">для людей, горящих сердцем и делом<br/>место для настоящего</H2>
         <div class="promo__i-want-container">
             <div class="promo__text">Я хочу:</div>
             <div class="promo__btn-container">
@@ -10,4 +11,5 @@
                 <a href="#" class="promo__btn btn">Стать арендатором</a>
             </div>
         </div>
-    </header>
+    </div>
+</header>
